switch from SOAP to REST OVH APIs

--- a/config.json.example
+++ b/config.json.example
@@ -1,5 +1,7 @@
 {
-    "login": "xxxxxxx-ovh",
-    "password": "PASSWORD"
+    "domain": "example.org",
+    "app_key": "",
+    "app_secret": "",
+    "consumer_key": ""
 }
 
