--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM python:3.6-slim
 
 RUN apt-get update && apt-get install -y graphviz && rm -rf /var/lib/apt/lists/*
-RUN pip install ovh
+RUN pip install -r requirements.txt
